# GANs_MI2I

./: .gitignore  04_image_translation_phd.yml  Dockerfile  LICENSE  README.md  command_gen.py  dataset_processing.py  docker-compose.yml  download_and_split_dataset.py  pix2pixHDCUDA11_environment.yml  pyproject.toml  segmentation_scores.py
.github/workflows/: ci.yml
brightfield/test_A/: 3CG0022780_r16c24f01p01.tiff  3CG0022780_r16c24f08p01.tiff
brightfield/train_A/: 3CG0022780_r01c07f01p01.tiff  3CG0022780_r01c07f07p01.tiff  3CG0022780_r01c08f01p01.tiff  3CG0022780_r01c09f01p01.tiff  3CG0022780_r02c07f02p01.tiff  3CG0022780_r02c08f01p01.tiff  3CG0022780_r03c07f01p01.tiff  3CG0022780_r03c07f07p01.tiff  3CG0022780_r03c08f05p01.tiff  3CG0022780_r04c07f09p01.tiff  3CG0022780_r04c08f09p01.tiff  3CG0022780_r05c08f07p01.tiff  3CG0022780_r05c08f09p01.tiff  3CG0022780_r06c08f01p01.tiff  3CG0022780_r06c08f04p01.tiff  3CG0022780_r06c08f05p01.tiff  3CG0022780_r06c08f06p01.tiff  3CG0022780_r07c07f07p01.tiff  3CG0022780_r07c08f01p01.tiff  3CG0022780_r08c07f09p01.tiff  3CG0022780_r08c08f01p01.tiff  3CG0022780_r08c08f05p01.tiff  3CG0022780_r10c07f07p01.tiff  3CG0022780_r10c07f09p01.tiff  (+56 more)
config/: train.yaml
pix2pixHD/: LICENSE.txt  README.md  encode_features.py  run_engine.py  test.py  test_16bit.py  test_af_he.py  test_dlmbl.py  test_gskbroad.py  test_tesaro.py  test_tesaro_benchmarking.py  train.py  train_afs_he.py  train_dlmbl.py  train_original.py  train_tesaro.py  variational_inference.py
tests/: test_data_loader.py  test_model_forward.py  test_segmentation_scores.py
(+189 files in other folders)
