[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gans-mi2i"
version = "0.1.0"
description = "Pix2PixHD-based virtual fluorescence staining from phase-contrast microscopy"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.22",
    "tifffile",
    "scikit-image",
    "scipy",
    "pandas",
    "tqdm",
    "pillow",
    "dominate",
    "pyyaml",
    "zarr",
    "tensorboard",
]

[project.optional-dependencies]
wandb = ["wandb"]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pix2pixHD*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]   # line length handled separately

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
